--- a/index.html
+++ b/index.html
@@ -6,54 +6,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
   <!-- CSS -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link type="text/css" rel="stylesheet" href="css/normalize.css">
+  <link type="text/css" rel="stylesheet" href="css/lightGallery.css" />
+  <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <div>
-    <form>
-      <input type="search" name="search" id="search" placeholder="search">
+  <div class="heading">
+    <form class="search">
+      <input type="search" name="search" id="search" placeholder="Search (by caption)">
     </form>
   </div>
-  <ul>
-    <li><a href="photos/01.jpg"><img src="photos/thumbnails/01.jpg" width="200"
-      alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields." />
-    </a></li>
-    <li><a href="photos/02.jpg"><img src="photos/thumbnails/02.jpg" width="200"
-      alt="The lake was so calm today. We had a great view of the snow on the mountains from here." />
-    </a></li>
-    <li><a href="photos/03.jpg"><img src="photos/thumbnails/03.jpg" width="200"
-      alt="I hiked to the top of the mountain and got this picture of the canyon and trees below." />
-    </a></li>
-    <li><a href="photos/04.jpg"><img src="photos/thumbnails/04.jpg" width="200"
-      alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today." />
-    </a></li>
-    <li><a href="photos/05.jpg"><img src="photos/thumbnails/05.jpg" width="200"
-      alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons." />
-    </a></li>
-    <li><a href="photos/06.jpg"><img src="photos/thumbnails/06.jpg" width="200"
-      alt="Fall is coming, I love when the leaves on the trees start to change color." />
-    </a></li>
-    <li><a href="photos/07.jpg"><img src="photos/thumbnails/07.jpg" width="200"
-      alt="I drove past this plantation yesterday, everything is so green!" />
-    </a></li>
-    <li><a href="photos/08.jpg"><img src="photos/thumbnails/08.jpg" width="200"
-      alt="My summer vacation to the Oregon Coast. I love the sandy dunes!" />
-    </a></li>
-    <li><a href="photos/09.jpg"><img src="photos/thumbnails/09.jpg" width="200"
-      alt="We enjoyed a quiet stroll down this countryside lane." />
-    </a></li>
-    <li><a href="photos/10.jpg"><img src="photos/thumbnails/10.jpg" width="200"
-      alt="Sunset at the coast! The sky turned a lovely shade of orange." />
-    </a></li>
-    <li><a href="photos/11.jpg"><img src="photos/thumbnails/11.jpg" width="200"
-      alt="I did a tour of a cave today and the view of the landscape below was breathtaking." />
-    </a></li>
-    <li><a href="photos/12.jpg"><img src="photos/thumbnails/12.jpg" width="200"
-      alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in." />
-    </a></li>
-  </ul>
-
+  <div class="grid">
+    <div class="cell" id="hayBales" data-src="photos/01.jpg"><img src="photos/thumbnails/01.jpg" width="200"
+      alt="<h4>Hay Bales</h4><p>I love hay bales. Took this snap on a drive through the countryside past some straw fields.</p>" />
+    </div>
+    <div class="cell" id="lake" data-src="photos/02.jpg"><img src="photos/thumbnails/02.jpg" width="200"
+      alt="<h4>Lake</h4><p>The lake was so calm today. We had a great view of the snow on the mountains from here.</p>" />
+    </div>
+    <div class="cell" id="canyon" data-src="photos/03.jpg"><img src="photos/thumbnails/03.jpg" width="200"
+      alt="<h4>Canyon</h4><p>I hiked to the top of the mountain and got this picture of the canyon and trees below.</p>" />
+    </div>
+    <div class="cell" id="iceberg" data-src="photos/04.jpg"><img src="photos/thumbnails/04.jpg" width="200"
+      alt="<h4>Iceberg</h4><p>It was amazing to see an iceberg up close, it was so cold but didn’t snow today.</p>" />
+    </div>
+    <div class="cell" id="desert" data-src="photos/05.jpg"><img src="photos/thumbnails/05.jpg" width="200"
+      alt="<h4>Desert</h4><p>The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.</p>" />
+    </div>
+    <div class="cell" id="fall" data-src="photos/06.jpg"><img src="photos/thumbnails/06.jpg" width="200"
+      alt="<h4>Fall</h4><p>Fall is coming, I love when the leaves on the trees start to change color.</p>" />
+    </div>
+    <div class="cell" id="plantation" data-src="photos/07.jpg"><img src="photos/thumbnails/07.jpg" width="200"
+      alt="<h4>Plantation</h4><p>I drove past this plantation yesterday, everything is so green!</p>" />
+    </div>
+    <div class="cell" id="dunes" data-src="photos/08.jpg"><img src="photos/thumbnails/08.jpg" width="200"
+      alt="<h4>Dunes</h4><p>My summer vacation to the Oregon Coast. I love the sandy dunes!<p>" />
+    </div>
+    <div class="cell" id="countryside" data-src="photos/09.jpg"><img src="photos/thumbnails/09.jpg" width="200"
+      alt="<h4>Countryside Lane</h4><p>We enjoyed a quiet stroll down this countryside lane.</p>" />
+    </div>
+    <div class="cell" id="sunset" data-src="photos/10.jpg"><img src="photos/thumbnails/10.jpg" width="200"
+      alt="<h4>Sunset</h4><p>Sunset at the coast! The sky turned a lovely shade of orange.</p>" />
+    </div>
+    <div class="cell" id="cave" data-src="photos/11.jpg"><img src="photos/thumbnails/11.jpg" width="200"
+      alt="<h4>Cave</h4><p>I did a tour of a cave today and the view of the landscape below was breathtaking.</p>" />
+    </div>
+    <div class="cell" id="bluebells" data-src="photos/12.jpg"><img src="photos/thumbnails/12.jpg" width="200"
+      alt="<h4>Bluebells</h4><p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>" />
+    </div>
+  </div>
+  <script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+  <script src="js/lightGallery/lightgallery.min.js"></script>
+  <!-- lightgallery plugins -->
+  <script src="js/lightGallery/lg-thumbnail.min.js"></script>
+  <script src="js/lightGallery/lg-fullscreen.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
