--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       alt="<h4>Bluebells</h4><p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>" />
     </div>
   </div>
+  <p class="copyright">&copy; 2017 Musthofa Yakan</p>
   <script
   src="http://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
