Edited script src

--- a/index.html
+++ b/index.html
@@ -56,13 +56,9 @@
     </div>
   </div>
   <p class="copyright">&copy; 2017 Musthofa Yakan</p>
-  <script
-  src="http://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
-  <script src="js/lightGallery/lightgallery.min.js"></script>
+  <script src="js/jquery-3.2.1.min.js"></script>
   <!-- lightgallery plugins -->
+  <script src="js/lightGallery/lightgallery.min.js"></script>
   <script src="js/lightGallery/lg-fullscreen.min.js"></script>
   <script src="js/main.js"></script>
 </body>
